# CG-works

./: .gitignore  README.md
3D Ball Parkour/: .gitignore
3D Ball Parkour/Project/: main.cpp
3D Ball Parkour/Project/class/: Material.cpp  Mesh.cpp  Model.cpp  Shader.h
3D Ball Parkour/Project/class/Game/: GameHolder.h
3D Ball Parkour/Project/class/Physics/: Box.h  Rigid.cpp  Rigid.h  Sphere.h
3D Ball Parkour/Project/design/: 地板素材.psd
3D Ball Parkour/Project/design/备份/: objects.c4d@20190629_140459  objects.c4d@20190629_141959  objects.c4d@20190629_142459  objects.c4d@20190629_144459  objects.c4d@20190629_170324  objects.c4d@20190629_200325  objects.c4d@20190629_200825  objects.c4d@20190629_225509  objects.c4d@20190630_132928  objects.c4d@20190630_133429
3D Ball Parkour/Project/objects/ground/: ground.mtl
3D Ball Parkour/Project/shaders/: color.frag
Color/: .gitignore
Color/OpenGLtest2/: .gitignore  CMakeLists.txt  Camera.cpp  local_settings.h  main.cpp  stb_image.h
Color/OpenGLtest2/class/: Camera.cpp  Camera.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp
Color/OpenGLtest2/class/Game/: GameHolder.cpp
Color/OpenGLtest2/class/Physics/: Box.cpp  Box.h  Hitable.cpp  Hitable.h  Plane.cpp  Plane.h  Rigid.cpp  Rigid.h  Sphere.cpp  Sphere.h
Color/OpenGLtest2/design/: box.psd  objects.c4d  地板素材.psd
Color/OpenGLtest2/lib/: glad.c
Color/OpenGLtest2/objects/box/: box.mtl
Color/OpenGLtest2/objects/introduction/: introduction.mtl
Color/OpenGLtest2/objects/sphere/: sphere.mtl
Color/OpenGLtest2/shaders/: color.frag  color.fs  color.vert
Color/OpenGLtest2/tools/: Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.h  Model.h  RandMath.h
